# syncify

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  justfile  pyproject.toml
.github/workflows/: deploy.yml
backend/: .gitignore  pyproject.toml
backend/scripts/: migrate_uuidv7.py
backend/src/syncify2/api/: api_v1.py  app.py  lambda_handler.py  session.py
backend/src/syncify2/common/: conf.py  db.py  scheduling.py  spotify.py
backend/src/syncify2/webapp/: api_v1.py  app.py  lambda_handler.py  session.py
backend/src/syncify2/worker/: lambda_handler.py  worker.py
backend/tests/: fake_spotify.py  test_rate_limit_tracking.py  test_spotify_sync.py  test_worker_status.py
frontend/: .npmrc  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts
frontend/src/: main.tsx
frontend/src/components/: posthog-bootstrapper.tsx
frontend/src/lib/api/: queries.ts  types.ts
frontend/src/routes/: __root.tsx  _authenticated.tsx  index.tsx
frontend/src/routes/_authenticated/: dashboard.tsx
infra/: .gitignore  main.tf  outputs.tf  variables.tf  versions.tf
infra/bootstrap/: main.tf
infra/modules/compute/: iam.tf  main.tf  outputs.tf  variables.tf
infra/modules/database/: main.tf  outputs.tf  variables.tf
infra/modules/frontend/: main.tf  outputs.tf  variables.tf
infra/modules/queue/: main.tf  outputs.tf
scripts/: deploy-stg.sh
src/syncify2/common/: spotify.py
src/syncify2/scheduler/: scheduler.py
src/syncify2/webapp/: api_v1.py
src/syncify2/worker/: worker.py
