[project]
name = "syncify2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Keval Kapdee", email = "keval@kapdee.uk" }
]
requires-python = ">=3.13"
dependencies = [
    "alembic~=1.18.4",
    "fastapi~=0.136.1",
    "SQLAlchemy~=2.0.49",
    "python-dotenv~=1.2.2",
    "spotipy~=2.26.0",
    "uvicorn~=0.46.0",
    "pydantic~=2.13.3",
    "psycopg2-binary~=2.9.12",
    "fastapi_sessions==0.3.2",
    "posthog~=7.13.1",
]

[project.scripts]
syncify2 = "syncify2:main"
scheduler = "scheduler:main"
webapp = "webapp:main"
worker = "worker:main"

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"
