[project]
name = "syncify"
version = "1.0.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Keval Kapdee", email = "keval@kapdee.uk" }
]
requires-python = ">=3.13"
dependencies = [
    "fastapi~=0.136.1",
    "spotipy~=2.26.0",
    "pydantic~=2.13.3",
    "posthog~=7.13.1",
    "mangum~=0.19.0",
    "python-jose[cryptography]~=3.3.0",
    "boto3~=1.38.0",
]


[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"
