[project]
name = "syncify"
version = "0.1.0"
authors = [
    { name = "Keval Kapdee", email = "keval@kapdee.uk" }
]
requires-python = ">=3.13"
dependencies = [
    "fastapi~=0.136.1",
    "spotipy~=2.26.0",
    "pydantic~=2.13.3",
    "posthog~=7.13.1",
    "mangum~=0.19.0",
    "python-jose[cryptography]~=3.3.0",
    "boto3~=1.38.0",
]

[tool.uv.build-backend]
module-name = "syncify2"

[build-system]
requires = ["uv_build>=0.11.0,<0.12.0"]
build-backend = "uv_build"
