[project]
name = "syncify"
version = "0.1.0"
authors = [
    { name = "Keval Kapdee", email = "keval@kapdee.uk" }
]
requires-python = ">=3.13"
dependencies = [
    "fastapi~=0.136.3",
    "spotipy~=2.26.0",
    "pydantic~=2.13.4",
    "posthog~=7.16.2",
    "mangum~=0.21.0",
    "python-jose[cryptography]~=3.5.0",
    "boto3~=1.43.18",
]

[tool.uv.build-backend]
module-name = "syncify2"

[build-system]
requires = ["uv_build>=0.11.0,<0.12.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
